<resources>
    <string name="app_name">搜布金管家</string>
    <string name="app_version">1.1.0</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="button_allow">允许</string>
    <string name="button_deny">拒绝</string>
    <string name="button_ok">好的</string>
    <string name="home_page">首页</string>
    <string name="marketing">推广</string>
    <string name="click_again_to_quit">再按一次退出金管家</string>
    <string name="turnover_volume_today">今日成交额(元)</string>
    <string name="today_visitor_num">今日访客数</string>
    <string name="today_product_visit">今日产品访问</string>
    <string name="today_order_num">今日订单数</string>
    <string name="today_return_rate">今日退货率</string>
    <string name="my_wallet">我的钱包</string>
    <string name="operation_report">运营报表</string>
    <string name="my_customer">我的客户</string>
    <string name="setting">设置</string>
    <string name="product_access_etc">产品访问等</string>
    <string name="transaction_record_display">交易记录展示</string>
    <string name="order_type">交易类型</string>
    <string name="real_name_authentication_etc">实名认证等</string>
    <string name="personal_information">个人信息</string>
    <string name="information">信息</string>
    <string name="company_logo">公司标志</string>
    <string name="company_name">公司名称</string>
    <string name="main_industry">主营行业</string>
    <string name="management_model">经营模式</string>
    <string name="company_address">公司地址</string>
    <string name="annual_turnover">年营业额</string>
    <string name="employees_num">员工人数</string>
    <string name="main_products">主营产品</string>
    <string name="company_profile">公司简介</string>
    <string name="store_name">店铺名称</string>
    <string name="contact">联系人</string>
    <string name="position">职位</string>
    <string name="mobile">手机</string>
    <string name="email">邮箱</string>
    <string name="phone">固定电话</string>
    <string name="location_not_match_toast">定位未开启或者暂不支持该地区，请手动选择所在地</string>
    <string name="permission_explain_location">您如果需要使用系统自己的定位，请打开定位权限</string>
    <string name="wrong_phone">请输入正确的手机号</string>
    <string name="wrong_empty_code">请输入验证码</string>
    <string name="empty_pwd">请输入密码</string>
    <string name="wrong_pwd">请输入6-20位包含数字和字母的密码</string>
    <string name="wrong_email">请输入正确的邮箱</string>
    <string name="much_more_big_tag">您最多只能选择两个大类</string>
    <string name="much_more_small_tag">您最多只能选择8个标签</string>
    <string name="please_input_new_phone">请输入新手机号</string>
    <string name="same_to_old_phone">与旧手机号相同，无法修改</string>
    <string name="please_input_image_code">请输入图形码</string>
    <string name="wrong_image_code">请输入正确的图形码</string>
    <string name="please_check_internet">请检查网络连接是否正常</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="total_amount_of_account_yuan">账户总金额(元)</string>
    <string name="rest_in_wait_yuan">待收尾款(元)</string>
    <string name="can_withdraw_yuan">可提现(元)</string>
    <string name="withdraw">提现</string>
    <string name="income_and_expenses">收入与支出</string>
    <string name="security_center">安全中心</string>
    <string name="wallet_alert">建议您的支付密码不要外泄,以免您的子账户在搜布软件中做提现操作</string>
    <string name="accumulated_income_yuan">累计收入(元)</string>
    <string name="today_income_yuan">今日收入(元)</string>
    <string name="last_week_income_yuan">近7天收入(元)</string>
    <string name="last_month_income_yuan">近30天收入(元)</string>
    <string name="bank_account">银行账户</string>
    <string name="account">账户</string>
    <string name="add_bank_account">添加银行卡账户</string>
    <string name="replace">更换</string>
    <string name="amount_of_money_yuan">金额(元)</string>
    <string name="current_cash_balance">当前现金余额%s元</string>
    <string name="confirm_roll_out">确认转出</string>
    <string name="customer_service_phone">客服电话</string>
    <string name="colon">:</string>
    <string name="dash">-</string>
    <string name="customer_service_phone_number">400-850-1773</string>
    <string name="account_num">账 户 号</string>
    <string name="card_no_and_passbook_no">银行卡号/存折号</string>
    <string name="bank_of_card">开户银行</string>
    <string name="please_input_bank_name">请输入银行名称</string>
    <string name="branch_bank_of_card">开户支行</string>
    <string name="branch_bank_address">开户地区</string>
    <string name="please_input_branch_bank_name">请输入支行名称</string>
    <string name="name_of_bank_account">户       名</string>
    <string name="please_choose_with_line">---请选择---</string>
    <string name="withdraw_explain">身份信息严格加密处理,仅用于身份验证</string>
    <string name="finish">完成</string>
    <string name="bank_explain">为保障打款安全与效率,请填写相关信息。(推荐使用中国银行、建设银行、农业银行、工商银行。)</string>
    <string name="find_help">查找帮助</string>
    <string name="account_name_explain_title">持卡人说明</string>
    <string name="account_name_explain_message">为了您的账户资金安全,只能绑定持卡人本人的银行卡 \n获取更多帮助,拨打客服电话400-850-1773</string>
    <string name="got_it">知道了</string>
    <string name="please_input_soubu_pay_password">请输入搜布支付密码</string>
    <string name="withdraw_handling">您的提现正在受理中,注意查收!</string>
    <string name="savings_card">储蓄卡</string>
    <string name="withdraw_amount">提现金额</string>
    <string name="kindly_reminder">温馨提示</string>
    <string name="withdraw_success_reminder_message">1.提现受理时间 9:00-18:00 \n2.受理后到账时间: \n  (1) 工作日2个小时内到账 \n  (2) 节假日24个小时内到账</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="pay_success">付款成功</string>
    <string name="customer_service_to_handle">处理客服</string>
    <string name="income">收入</string>
    <string name="expenses">支出</string>
    <string name="modify_pay_password">修改支付密码</string>
    <string name="modify_password">修改密码</string>
    <string name="find_pay_password">找回支付密码</string>
    <string name="please_input_original_soubu_pay_pwd">请输入原搜布支付密码</string>
    <string name="please_input_new_soubu_pay_pwd">请输入新搜布支付密码</string>
    <string name="please_input_new_soubu_pay_pwd_again">请再次输入新搜布支付密码</string>
    <string name="confirm">确定</string>
    <string name="wrong_click">点错了</string>
    <string name="verify">验证</string>
    <string name="security_verification">安全验证</string>
    <string name="bigger_than">&gt;</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="input_verify_code_in_phone">请输入手机短信中的验证码</string>
    <string name="find_pwd_help">若无法收到验证码,请联系搜布客服</string>
    <string name="turnover_volume">成交额</string>
    <string name="turnover_volume_unit">元</string>
    <string name="account_balance">账户余额</string>
    <string name="accumulated_income">累计收入</string>
    <string name="store_visitor">店铺访客</string>
    <string name="store_visitor_unit">人</string>
    <string name="accumulated_visitor">累计访客数</string>
    <string name="today_visitor">今日访客数</string>
    <string name="last_week_visitor">近7天访客数</string>
    <string name="last_month_visitor">近30天访客数</string>
    <string name="product_access">产品访问</string>
    <string name="product_access_unit">次</string>
    <string name="accumulated_product_access">累计访问量</string>
    <string name="today_product_access">今日访问量</string>
    <string name="last_week_product_access">近7天访问量</string>
    <string name="last_month_product_access">近30天访问量</string>
    <string name="return_rate">退货率</string>
    <string name="return_rate_unit">%</string>
    <string name="accumulated_return_rate">累计退货率</string>
    <string name="last_week_return_rate">近7天退货率</string>
    <string name="last_month_return_rate">近30天退货率</string>
    <string name="more_data">更多数据</string>
    <string name="last_week_offer_num">近7天报价数</string>
    <string name="last_week_collect_num">近7天收藏数</string>
    <string name="last_week">近7天</string>
    <string name="last_month">近30天</string>
    <string name="last_half_year">近6月</string>
    <string name="all">全部</string>
    <string name="pending_payment">待付款</string>
    <string name="pending_shipped">待发货</string>
    <string name="refund_appeal">退货/申诉</string>
    <string name="contact_friends">通讯录好友</string>
    <string name="products_on_sale">在售产品</string>
    <string name="all_evaluate">全部评价</string>
    <string name="product_amount_desc">共%s件商品</string>
    <string name="total">合计</string>
    <string name="rmb">¥</string>
    <string name="with_bracket">(%s)</string>
    <string name="price">价格</string>
    <string name="browser">浏览</string>
    <string name="collection">收藏</string>
    <string name="yuan">元</string>
    <string name="backslash">/</string>
    <string name="meter">米</string>
    <string name="kg">kg</string>
    <string name="please_input_your_phone_number">请输入您的手机号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="register_new_user">新用户注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="permission_explain_storage">我们需要读取您的存储文件来让您更好的使用我们的应用</string>
    <string name="permission_explain_camera">您只有打开了允许了相机权限才可以使用相机</string>
    <string name="permission_explain_phone">您只有打开了允许了电话权限才可以拨打电话</string>
    <string name="please_input_child_phone">请输入关联店铺账号</string>
    <string name="store_would_refer">将要关联的店铺(可添加多个)</string>
    <string name="add">添加</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="register_pwd_desc">请设置6-20位密码</string>
    <string name="next_step">下一步</string>
    <string name="register_pre_protocol">我已阅读并接受</string>
    <string name="register_protocol">搜布用户协议</string>
    <string name="supplier_register">供应商注册</string>
    <string name="register">注册</string>
    <string name="refer_store">关联店铺</string>
    <string name="find_pwd">找回密码</string>
    <string name="alert">提示</string>
    <string name="phone_has_been_registered">该手机号码已注册 /n  可以直接前往关联店铺</string>
    <string name="base_info">基本信息</string>
    <string name="account_info">账户信息</string>
    <string name="register_alert">(请慎重选择，注册成功后部分不可修改）</string>
    <string name="please_choose">请选择</string>
    <string name="please_choose_feedback_type">请选择反馈类型</string>
    <string name="contact_name">联系人姓名</string>
    <string name="position_in">所在职位</string>
    <string name="company_info">公司信息</string>
    <string name="finish_register">注册完成</string>
    <string name="location_at">所在地</string>
    <string name="detail_address">详细地址</string>
    <string name="company_profile_desc">请重点介绍公司的产品、服务、业绩、人才、管理等优势。不要填写电话、电子邮件、聊天账号等联系方式，否则审核不通过。600字以内</string>
    <string name="watch_example">查看示例</string>
    <string name="company_type">单位类型</string>
    <string name="certificates_type">证件类型</string>
    <string name="operator_name">经营者姓名</string>
    <string name="enterprise_name">企业名称</string>
    <string name="please_fill_enterprise_name">请填写企业名称</string>
    <string name="please_fill_operator_name">请填写经营者姓名</string>
    <string name="legal_person">法定代表人</string>
    <string name="legal_person_suffix">的证件</string>
    <string name="please_fill_name">请填写姓名</string>
    <string name="please_fill_legal_person">请填写法定代表人姓名</string>
    <string name="id_num">身份证号</string>
    <string name="contact_method">联系方式</string>
    <string name="please_fill_id_num">请填写身份证号</string>
    <string name="please_fill_mobile">请填写手机号</string>
    <string name="child_account_manage">子账户管理</string>
    <string name="wallet_manage">钱包管理</string>
    <string name="function_operation">功能操作</string>
    <string name="not_smooth_use">使用不流畅</string>
    <string name="other_issue">其他问题</string>
    <string name="please_input_your_valuable_advice">请输入您宝贵的意见</string>
    <string name="submit_feedback">提交意见反馈</string>
    <string name="address">地址</string>
    <string name="soubu_address">宁波市鄞州区钱湖天地TBD-A座5楼</string>
    <string name="soubu_service_protocol">搜布服务条款</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="have_commit_sign_up_request">您的报名申请已提交！</string>
    <string name="sign_up_success_desc_pre">共提交了</string>
    <string name="sign_up_success_desc_post">件商品，请等待搜布审核...</string>
    <string name="return_to_activity_home">返回活动首页</string>
</resources>