<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_service_phone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="4dp"
        android:text="@string/colon" />

    <TextView
        android:id="@+id/tv_customer_service_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_service_phone_number"
        android:textColor="@color/colorPrimary" />
</LinearLayout>