<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/selector_item_transparent_grey_bg"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/account_num"
                android:textColor="@color/title_black"
                android:textSize="16sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/card_no_and_passbook_no"
                android:textColor="@color/bank_account_blue"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/selector_item_transparent_grey_bg"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/bank_of_card"
                android:textColor="@color/title_black"
                android:textSize="16sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/please_input_bank_name"
                android:textColor="@color/bank_account_blue"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_bank_help"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginRight="12dp"
                android:src="@drawable/wallet_withdraw_notice" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/selector_item_transparent_grey_bg"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/branch_bank_of_card"
                android:textColor="@color/title_black"
                android:textSize="16sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/please_input_branch_bank_name"
                android:textColor="@color/bank_account_blue"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/selector_item_transparent_grey_bg"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/branch_bank_address"
                android:textColor="@color/title_black"
                android:textSize="16sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/please_choose_with_line"
                android:textColor="@color/bank_account_blue"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/selector_item_transparent_grey_bg"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/name_of_bank_account"
                android:textColor="@color/title_black"
                android:textSize="16sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="赵四"
                android:textColor="@color/bank_account_blue"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_account_name"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginRight="12dp"
                android:src="@drawable/wallet_withdraw_notice" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/withdraw_explain"
        android:textColor="@color/subtitle_grey"/>

    <Button
        style="@style/OrangeButton"
        android:id="@+id/btn_finish"
        android:layout_below="@+id/ll_top"
        android:layout_marginTop="10dp"
        android:text="@string/finish"/>
</LinearLayout>