<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_success"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:src="@drawable/sign_up_success"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/have_commit_sign_up_request"
        android:textColor="@color/blue_sign_up_success"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_success_desc_pre"
            android:textColor="@color/search_text_color"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_sign_up_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="18"
            android:textColor="@color/red_sign_up_product"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_success_desc_post"
            android:textColor="@color/search_text_color"
            android:textSize="16sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/bt_return"
        style="@style/OrangeButton"
        android:layout_width="168dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:text="@string/return_to_activity_home"/>
</LinearLayout>

