<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="40dp">

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_add_bank_account"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/selector_item_transparent_grey_bg"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/bank_account"
                android:textColor="@color/title_black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/add_bank_account"
                android:textColor="@color/bank_account_blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_replace"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/bg_orange_stroke_corners"
                android:gravity="center"
                android:text="@string/replace"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/selector_item_transparent_grey_bg"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/amount_of_money_yuan"
                android:textColor="@color/title_black"
                android:textSize="16sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/current_cash_balance"
                android:textColor="@color/bank_account_blue"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/OrangeButton"
        android:id="@+id/btn_confirm"
        android:layout_below="@+id/ll_top"
        android:layout_marginTop="40dp"
        android:text="@string/confirm_roll_out" />


    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        layout="@layout/customer_service_phone"/>

</RelativeLayout>