<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/filter_selected_color"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/account_info"
                    android:textColor="@color/line_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/register_alert"
                    android:textColor="@color/line_color" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white" />

            <Button
                android:id="@+id/btn_next_step"
                style="@style/OrangeButton"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/next_step" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>